# rendr

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp  notes.txt
.github/workflows/: build-linux.yml  build.yml  linus-build.yml  multiplatform-build.yml
assets/: fragment.glsl  vertex.glsl
cmake/: dependencies.cmake  options.cmake  platform.cmake
demo/: main.cpp
editor/: CMakeLists.txt  main.cpp
editor/include/: editor.h  gui.h  imgui.h  input.h  utils.h
editor/include/imgui/: imGuIZMOquat.h  imguizmo_config.h  imguizmo_quat.h  vGizmo3D.h  vGizmo3D_config.h  vgMath_config.h
editor/src/: editor.cpp  input.cpp
include/rendr/: bounding_box.h  camera.h  constants.h  context.h  draw_command.h  geometry.h  glw.h  glw.hpp  load.h  mapped_vector.h  mesh_storage.h  model_storage.h  primitives.h  rbuffer.h  shader_source.h  shader_sources.h  system.h  types.h  utils.h  window.h
include/rendr/gl/: allocator.h  bind.h  draw.h  draw_command.h  enums.h  mapped_buffer.h  mmbuffer.h  program.h  shader.h  vertex_array.h
src/: bounding_box.cpp  context.cpp  geometry.cpp  load.cpp  primitives.cpp  system.cpp  util.cpp  window.cpp
src/gl/: program.cpp  vertex_array.cpp
